# obs-fightrecorder

./: CMakeLists.txt  CMakePresets.json  README.md  buildspec.json
.github/actions/run-clang-format/: action.yaml
.github/workflows/: pr-pull.yaml  push.yaml
src/: plugin-main.c  plugin-main.h  plugin-support.h
